log
ma., 13 de may. de 2025 20:24:57: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
ma., 13 de may. de 2025 20:35:31: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:15: error: unused variable 'k' [-Werror=unused-variable]
     int i, j, k;
               ^
cc1.exe: all warnings being treated as errors
3bbd6a8
ma., 13 de may. de 2025 20:35:44: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ca12364
ma., 13 de may. de 2025 20:40:20: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
4e49e8b
Wed, May 14, 2025  8:38:01 AM: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  6|2
total_score: 45/70
7974806
Wed, May 14, 2025  9:15:41 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:121:10: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while (size(pila) != 0){
          ^~~~
sudoku.c:122:18: error: void value not ignored as it ought to be
     Node* node = pop(pila);
                  ^~~
cc1.exe: all warnings being treated as errors
072627e
Wed, May 14, 2025  9:16:15 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:122:18: error: void value not ignored as it ought to be
     Node* node = pop(pila);
                  ^~~
2b97706
Wed, May 14, 2025  9:16:51 AM: 
 sudoku.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  6|2
total_score: 45/70
54bd7cc
mi., 14 de may. de 2025 19:53:50: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8d70c4c
mi., 14 de may. de 2025 20:06:09: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:127:11: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
   while (!isEmpty(stack)){
           ^~~~~~~
sudoku.c:128:21: error: void value not ignored as it ought to be
     Node* current = pop(stack);
                     ^~~
sudoku.c:128:11: error: unused variable 'current' [-Werror=unused-variable]
     Node* current = pop(stack);
           ^~~~~~~
cc1.exe: all warnings being treated as errors
d7eede2
mi., 14 de may. de 2025 20:08:45: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:127:11: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
   while (!isEmpty(stack)){
           ^~~~~~~
cc1.exe: all warnings being treated as errors
78b2c48
